force-app/main/default/objects/Fees__c/Fees__c.object-meta.xml
<CustomObject>
    <label>Fee</label>
    <nameField>
        <displayFormat>Fee-{0000}</displayFormat>
        <label>Fees Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>