force-app/main/default/objects/Fees__c/fields/Amount_Balance__c.field-meta.xml
<CustomField>
    <fullName>Amount_Balance__c</fullName>
    <formula>Amount_to_Pay__c -  Amount_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>