force-app/main/default/objects/Fees__c/fields/Number_of_participations__c.field-meta.xml
<CustomField>
    <fullName>Number_of_participations__c</fullName>
    <label>Number of participations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>