force-app/main/default/objects/Fees__c/fields/Payer__c.field-meta.xml
<CustomField>
    <fullName>Payer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Payer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Fees</relationshipLabel>
    <relationshipName>Fees</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>