force-app/main/default/objects/Fees__c/fields/PaymentDetails__c.field-meta.xml
<CustomField>
    <fullName>PaymentDetails__c</fullName>
    <label>Payment details</label>
    <type>TextArea</type>
</CustomField>