force-app/main/default/objects/Fees__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount_Balance__c</columns>
    <columns>Amount_Paid__c</columns>
    <columns>Amount_to_Pay__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Number_of_participations__c</columns>
    <columns>Payer__c</columns>
    <columns>PaymentDetails__c</columns>
    <columns>Payment_Method__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>Program__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>